tests/snapshots/resource_generator_tests__patient_type_guard.snap
---
source: tests/resource_generator_tests.rs
expression: output
---
/**
 * Type guard to check if a resource is a Patient
 * 
 * @param resource - The resource to check
 * @returns True if the resource is a Patient
 */
export function isPatient(resource: Resource): resource is Patient {
  return resource.resourceType === "Patient";
}
