tests/snapshots/resource_generator_tests__resource_union.snap
---
source: tests/resource_generator_tests.rs
expression: output
---
/**
 * Union type of all FHIR resources
 * 
 * This type represents any valid FHIR resource.
 */
export type AnyResource = Patient | Observation;
